@@ -84,7 +84,8 @@ unsigned char sys_lmm_trace_spin[] = {
   0x4d, 0x4d, 0x5f, 0x4a, 0x55, 0x4d, 0x50, 0x5f, 0x50, 0x54, 0x52, 0x5f,
   0x72, 0x65, 0x74, 0x0a, 0x4c, 0x4d, 0x4d, 0x5f, 0x4a, 0x55, 0x4d, 0x50,
   0x5f, 0x72, 0x65, 0x74, 0x0a, 0x4c, 0x4d, 0x4d, 0x5f, 0x50, 0x55, 0x53,
-  0x48, 0x5f, 0x72, 0x65, 0x74, 0x0a, 0x4c, 0x4d, 0x4d, 0x5f, 0x52, 0x41,
+  0x48, 0x5f, 0x72, 0x65, 0x74, 0x0a, 0x4c, 0x4d, 0x4d, 0x5f, 0x52, 0x45,
+  0x54, 0x5f, 0x72, 0x65, 0x74, 0x0a, 0x4c, 0x4d, 0x4d, 0x5f, 0x52, 0x41,
   0x0a, 0x09, 0x6c, 0x6f, 0x6e, 0x67, 0x20, 0x30, 0x09, 0x27, 0x20, 0x72,
   0x65, 0x74, 0x75, 0x72, 0x6e, 0x20, 0x61, 0x64, 0x64, 0x72, 0x65, 0x73,
   0x73, 0x20, 0x66, 0x6f, 0x72, 0x20, 0x4c, 0x4d, 0x4d, 0x20, 0x73, 0x75,
@@ -528,4 +529,4 @@ unsigned char sys_lmm_trace_spin[] = {
   0x5f, 0x66, 0x6c, 0x61, 0x67, 0x73, 0x0a, 0x09, 0x6c, 0x6f, 0x6e, 0x67,
   0x09, 0x30, 0x0a, 0x00
 };
-unsigned int sys_lmm_trace_spin_len = 6327;
+unsigned int sys_lmm_trace_spin_len = 6339;
